--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               We are a company who mainly focus on the client side we listen to what they do need and we work according
               to that only.
 
-              This company is owned by Adesh Tanmay. Who can also be considered as the youngest entrepreneu in india.
+              This company is owned by Adesh Tanmay. Who can also be considered as the youngest entrepreneur in india.
             </p>
 
             <button class="btn"><a href="#services" color="white"><b>Learn More</b></a></button>
