Changed contact us setting and a speeling mistake

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
           <li class="navbar-item">
-            <a href="#features" class="navbar-link" data-navbar-link>Contact Us</a>
+            <a href="#footer" class="navbar-link" data-navbar-link>Contact Us</a>
           </li>
 
         </ul>
@@ -669,7 +669,7 @@
     - #FOOTER
   -->
 
-  <footer class="footer" href="#footer">
+  <footer class="footer" id="footer">
 
     <div class="footer-top section">
       <div class="container">
